--- a/web01/WebContent/test08.html
+++ b/web01/WebContent/test08.html
@@ -4,84 +4,32 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <style>
-/* absolute 사용하기 
-=> 가장 가까운 조상을 기준으로 위치를 지정할 수 있다.
-=> 기준이 되는 조상은 absolute, fixed, relative여야 한다.
-=> 만약 조상 중에 기준을 만족하는 조상이 없다면,
-   body를 기준으로 위치를 잡는다.
 
-absolute => 조상 컴포넌트를 기준으로 위치 지정. 공중 부양.
-fixed => 브라우저를 기준으로 위치 지정. 공중 부양.
-relative => 현재 위치 고수. 앞/뒤, 좌/우로 위치 조정. 
-           => absolute의 기준 객체로 사용할 때.  
-*/
-#header {
-	height: 40px;
-	background-color: yellow;
-}
-#sidebar {
-	float: left;
-	width: 160px;
-	height: 500px;
-	background-color: gray;
-}
-#content1, #content2 {
-    margin-left: 165px;
-    /*padding: 0px 10px 0px 10px;*/ /* 시계 방향*/
-    /*padding: 0px 10px;*/ /* 위/아래 우/좌 */
-    padding: 10px; /* all */
-	width: 600px;
-	border: 1px solid black;
-}
-#footer {
-    clear: left;
-	height: 40px;
-	background-color: blue;
-}
-h1 {
-	color: gray;
-}
-p { border: 1px dotted lightgray;}
-#img1 {
-	position: absolute;
-	left: 50px;
-	top: 70px;
-	border: 1px solid gray;
-}
-#img2 {
-	position: fixed;
-	left: 50px;
-	top: 70px;
-	border: 1px solid gray;
-}
-#content1 {
-	position: relative;
-	left: -30px;
-	top: -30px;
-}
 </style>
 </head>
 <body>
-<div id="header"></div>
-<div id="sidebar"></div>
-<div id="content1">
-<h1>제목</h1>
-<p>A deliverable of the HTML5Apps projtion Working Group API to request display of content on an external screen, a draft API from the Web Bluetooth Community Group, Device APIs Working Group work on a generic pattern for sensors APIs, as well as work on an API to manage permissions across other APIs. Learn more about the Web and Mobile Interest Group.</p>
-<p>W3C has published tgies developed in W3C that 
-increase the capabilities of Web applications, 
-and how they apply more specifically to the mobile 
-context.
-<img id='img1' src='http://icon.daumcdn.net/w/icon/1312/19/152729032.png'>
-</p>
-</div>
-<div id="content2">
-<p>A deliverable of the HTML5Apps project, thsentation Working Group API to request display of content on an external screen, a draft API from the Web Bluetooth Community Group, Device APIs Working Group work on a generic pattern for sensors APIs, as well as work on an API to manage permissions across other APIs. Learn more about the Web and Mobile Interest Group.</p>
-<p>W3C has published the Octcrease the capabilities of Web applications, and how they apply more specifically to the mobile context.</p>
-</div>
-<div id="footer">
-모든권리 있다.
-</div>
-<img id='img2' src='http://icon.daumcdn.net/w/icon/1312/19/152729032.png'>
+<h1>자바스크립트 기본 문법 정리</h1>
+<!-- 
+=> 자바스크립트는 <script></script> 태그에 적는다.
+=> 선언된 순서대로 실행한다.
+=> 페이지 로딩 속도를 높이기 위해 
+   <script>태그를 body맨 뒤에 둔다.
+   (대표적인사이트: www.lumosity.com)
+ -->
+<h1>제목1</h1>
+<script>
+alert("1111");
+</script>
+
+<h1>제목2</h1>
+<script>
+alert("2222");
+</script>
+
+<h1>제목3</h1>
+<script>
+alert("3333");
+</script>
 
 </body>
 </html>
