--- a/web01/WebContent/test18_1.html
+++ b/web01/WebContent/test18_1.html
@@ -34,10 +34,10 @@ document.getElementById('btn1').onclick = function() {
 	xhr.open("GET", "http://api.openweathermap.org/data/2.5/weather?q=seoul,kr", true);
 	xhr.send();
 	
-	var obj = JSON.parse(xhr.responseText);
-	console.log(obj.name);
+	//var obj = JSON.parse(xhr.responseText);
+	//console.log(obj.name);
 	
-}
+};
 
 </script>
 </body>
